added swagger documentation and new get status method
