# docs/swagger.yaml
@@ -1,3 +1,4 @@
+basePath: /
 definitions:
   user.User:
     properties:
@@ -5,11 +6,15 @@ definitions:
         type: integer
       subscription_status:
         type: string
-      telegram_username:
+      username:
         type: string
     type: object
+host: localhost:8082
 info:
   contact: {}
+  description: This is a sample server for managing user subscriptions.
+  title: User Database API
+  version: "1.0"
 paths:
   /users:
     post:
@@ -122,4 +127,33 @@ paths:
           schema:
             type: string
       summary: Update a user's subscription status
+  /users/{username}/subscription:
+    get:
+      description: Get the subscription status of a user by their username
+      parameters:
+      - description: Username
+        in: path
+        name: username
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Subscription status
+          schema:
+            type: string
+        "400":
+          description: Bad Request
+          schema:
+            type: string
+        "404":
+          description: Not Found
+          schema:
+            type: string
+        "500":
+          description: Internal Server Error
+          schema:
+            type: string
+      summary: Get subscription status of a user by username
 swagger: "2.0"
